--- a/.config
+++ b/.config
@@ -29,3 +29,4 @@ CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-app-udpxy=y
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-neobird=y
